--- a/webprj/Practice/StyleP.css
+++ b/webprj/Practice/StyleP.css
@@ -112,6 +112,7 @@ ul li
 .LayoutSubContents
 {
     box-sizing: border-box;
+    height: auto;
     margin: 0;
     padding: 0;
 }
@@ -121,6 +122,7 @@ ul li
 {
     margin : 0;
     padding: 0;
+    height: auto;
 
 }
 
@@ -129,16 +131,20 @@ ul li
     position: relative;
     margin :0;
     padding : 0;
+    text-decoration: none;
+    margin-bottom: 10px;
 }
 
 .SubConText
 {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 4px;
+    margin :0;
     padding: 5px 10px;
     box-sizing: border-box;
     background-color: rgba(0,0,0,0.5);
+    
     width: 100%;
     color:#fff;
 }
